# ai-foundry-ai-agent-mcp-server-example

./: .env-sample  README.md  pyproject.toml  simple-agent-mcp-server.py  simple-client-mcp.py
